--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
    <h1>Homework: Lysytsia Tetiana</h1>
    <ol>
-      <li><a href="./Lesson-2/index.html">Home assignment 2</a></li>
+      <li><a href="./lesson-2/index.html">Home assignment 2</a></li>
    </ol>
 </body>
 
