--- a/lesson-2/tasks/task0.html
+++ b/lesson-2/tasks/task0.html
@@ -16,9 +16,9 @@
 
    <script>
       //Вводимо аргументи
-      const a = parseFloat(prompt('Введіть число', '0'))
-      const b = parseFloat(prompt('Введіть число', '0'))
-      const c = parseFloat(prompt('Введіть число', '0'))
+      const a = parseFloat(prompt('Введіть число a', '0'))
+      const b = parseFloat(prompt('Введіть число b', '0'))
+      const c = parseFloat(prompt('Введіть число c', '0'))
 
       //Обчислюємо
       const S1 = (a + 12 + b)
