--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-   <h1>Homework: Lysytsia Tetiana</h1>
+   <h1>Homework Assignments</h1>
    <ol>
       <li><a href="./lesson-2/index.html">Home assignment 2</a></li>
    </ol>
