--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <h1>Home Assignments</h1>
    <ol>
       <li><a href="./lesson-2/index.html">Home assignment 2</a></li>
+      <li><a href="./lesson-3/index.html">Home assignment 3</a></li>
    </ol>
 </body>
 
