--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -16,7 +16,7 @@
    <h3><a href="./tasks/task2.html">Задача 2</a></h3>
    <p>З клавіатури вводиться ціна товару і кількість грошей. Якщо грошей не вистачає то відмовляємо у покупці,
       інакше, якщо ще залишаються гроші, то пропонуємо купити лотерею за 4 грн.</p>
-   <h3><a href="./tasks/task3.html">Задача 3/a></h3>
+   <h3><a href="./tasks/task3.html">Задача 3</a></h3>
    <p>3. Випадковим чином генерується число від 1 до 5. Спробуйте вгадати число за 2 спроби.</p>
    <h3><a href="./tasks/task4.html">Задача 4</a></h3>
    <p>З клавіатури вводиться вік людини. Вивести на екран ким він є (дитиною у садочку, школярем, студентом,
