--- a/lesson-3/tasks/task2.html
+++ b/lesson-3/tasks/task2.html
@@ -24,7 +24,8 @@
          console.log('У вас є безпрецедентна нагода виграти мільйон')
       else if (itemPrice > userBudget)
          console.log('Ви не можете придбати цей товар.')
-      else ('Дякуємо за покупку!')
+      else 
+         console.log('Дякуємо за покупку!')
 
    </script>
 </body>
