--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <ol>
       <li><a href="./lesson-2/index.html">Home assignment 2</a></li>
       <li><a href="./lesson-3/index.html">Home assignment 3</a></li>
+      <li><a href="./lesson-5/index.html">Home assignment 5</a></li>
    </ol>
 </body>
 
