--- a/lesson-5/tasks/task2.html
+++ b/lesson-5/tasks/task2.html
@@ -13,7 +13,7 @@
    <div class="task">
       <h1>Задача 2</h1>
       <p>Створити 10 елементів для введення цін продуктів</p>
-      <img src="/lesson-5/img/task2.jpg" alt="Table">
+      <img src="../lesson-5/img/task2.jpg" alt="Table">
    </div>
    <div class="result">
 
