--- a/lesson-5/tasks/task3.html
+++ b/lesson-5/tasks/task3.html
@@ -13,7 +13,7 @@
    <div class="task">
       <h1>Задача 3</h1>
       <p>Вивести таблицю з одним рядком і 7 стовпцями.</p>
-      <img src="/lesson-5/img/task3.jpg" alt="Task 3">
+      <img src="../img/task3.jpg" alt="Task 3">
    </div>
    <div class="result">
       <p>Результат:</p>
