--- a/lesson-5/tasks/task4.html
+++ b/lesson-5/tasks/task4.html
@@ -13,7 +13,7 @@
    <div class="task">
       <h1>Задача 4</h1>
       <p>Вивести таблицю з 3 рядків і 7 стовпців</p>
-      <img src="/lesson-5/img/task4.png" alt="Task 4">
+      <img src="../img/task4.png" alt="Task 4">
    </div>
    <div class="result">
       <p>Результат:</p>
