--- a/lesson-5/tasks/task5.html
+++ b/lesson-5/tasks/task5.html
@@ -13,7 +13,7 @@
    <div class="task">
       <h1>Задача 5</h1>
       <p>Вивести таблицю з 3 рядками і 3 стовпцями</p>
-      <img src="/lesson-5/img/task5.png" alt="Task 5">
+      <img src="../img/task5.png" alt="Task 5">
    </div>
    <div class="result">
       <p>Результат:</p>
