--- a/lesson-5/tasks/task6.html
+++ b/lesson-5/tasks/task6.html
@@ -13,7 +13,7 @@
    <div class="task">
       <h1>Задача 6</h1>
       <p>Вивести 3 таблиці (по 3 рядки і 3 стовпці у кожній) за зразком</p>
-      <img src="/lesson-5/img/task6.png" alt="Task 6">
+      <img src="../img/task6.png" alt="Task 6">
    </div>
    <div class="result result-flex">
       <div>Результат:</div>
