--- a/lesson-5/tasks/task7.html
+++ b/lesson-5/tasks/task7.html
@@ -13,7 +13,7 @@
    <div class="task">
       <h1>Задача 7</h1>
       <p>Вивести на екран N абзаців (N вводиться користувачем) за зразком:</p>
-      <img src="/lesson-5/img/task7.png" alt="Task 7">
+      <img src="../img/task7.png" alt="Task 7">
    </div>
    <div class="result">
       <div>Результат:</div>
