--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="./lesson-3/index.html">Home assignment 3</a></li>
       <li><a href="./lesson-5/index.html">Home assignment 5</a></li>
       <li><a href="./lesson-7/index.html">Home assignment 7</a></li>
+      <li><a href="./lesson-7/index.html">Home assignment 8</a></li>
    </ol>
 </body>
 
