--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="./lesson-5/index.html">Home assignment 5</a></li>
       <li><a href="./lesson-7/index.html">Home assignment 7</a></li>
       <li><a href="./lesson-7/index.html">Home assignment 8</a></li>
+      <li><a href="./lesson-7/index.html">Home assignment 9</a></li>
    </ol>
 </body>
 
