--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li><a href="./lesson-9/index.html">Home assignment 9</a></li>
       <li><a href="./lesson-10/index.html">Home assignment 10</a></li>
       <li><a href="./lesson-11/index.html">Home assignment 11</a></li>
+      <li><a href="./lesson-12/index.html">Home assignment 12</a></li>
    </ol>
 </body>
 
