--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       <li><a href="./lesson-10/index.html">Home assignment 10</a></li>
       <li><a href="./lesson-11/index.html">Home assignment 11</a></li>
       <li><a href="./lesson-12/index.html">Home assignment 12</a></li>
+      <li><a href="./lesson-13/index.html">Home assignment 13</a></li>
+      <li><a href="./lesson-14/index.html">Home assignment 14</a></li>
+      <li><a href="./lesson-15/index.html">Home assignment 15</a></li>
+      <li><a href="./lesson-16/index.html">Home assignment 16</a></li>
+      <li><a href="./lesson-17/index.html">Home assignment 16</a></li>
    </ol>
 </body>
 
