--- a/lesson-18/tasks/task2.html
+++ b/lesson-18/tasks/task2.html
@@ -43,8 +43,8 @@
    <script>
       function converter(usdRate, euroRate) {
          const uahMoney = parseFloat(document.getElementById("uah").value)
-         document.getElementById("usd").value = (uahMoney * euroRate).toFixed(2)
-         document.getElementById("eur").value = (uahMoney * usdRate).toFixed(2)
+         document.getElementById("usd").value = (uahMoney / euroRate).toFixed(2)
+         document.getElementById("eur").value = (uahMoney / usdRate).toFixed(2)
       }
       window.onload = function () {
          document.querySelector('.convert').onclick = converter(38, 40)
