--- a/lesson-18/tasks/task2.html
+++ b/lesson-18/tasks/task2.html
@@ -46,9 +46,8 @@
          document.getElementById("usd").value = (uahMoney / euroRate).toFixed(2)
          document.getElementById("eur").value = (uahMoney / usdRate).toFixed(2)
       }
-      window.onload = function () {
-         document.querySelector('.convert').onclick = converter(38, 40)
-      }
+         document.querySelector('convert').onclick = converter(38, 40)
+
 
    </script>
 </body>
