--- a/lesson-18/tasks/task6.html
+++ b/lesson-18/tasks/task6.html
@@ -26,7 +26,7 @@
                <input type="text" id="grades" value="0">
             </label>
          </div>
-         <div class="button">
+         <div class="button-table">
             <button>Get table</button>
          </div>
          <div class="table">
@@ -47,11 +47,10 @@
                let row = document.createElement('input')
                let r = document.querySelector('.table')
                r.append(row)
-               row.setAttribute('placeholder', 0)
+               row.setAttribute('value', 0)
                row.setAttribute('id', 'grade-value')
             }
          }
-         getTable()
 
          function getSum() {
             const grades = document.querySelectorAll('#grade-value')
@@ -63,6 +62,7 @@
             document.getElementById('average').innerHTML = average
          }
          window.onload = function () {
+            document.querySelector('.button-table').onclick = getTable
             document.querySelector('.get-average').onclick = getSum
          }
       </script>
