--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li><a href="./lesson-15/index.html">Home assignment 15</a></li>
       <li><a href="./lesson-16/index.html">Home assignment 16</a></li>
       <li><a href="./lesson-17/index.html">Home assignment 17</a></li>
+      <li><a href="./lesson-18/index.html">Home assignment 18</a></li>
    </ol>
 </body>
 
